--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -43,8 +43,8 @@ jobs:
         run: tox -e doc8
       - name: Check docstring coverage
         run: tox -e docstr-coverage
-      - name: Check documentation build with Sphinx
-        run: tox -e docs
+      # - name: Check documentation build with Sphinx
+      #   run: tox -e docs
   tests:
     name: Tests
     runs-on: ${{ matrix.os }}
