--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -39,8 +39,8 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: pip install tox
-      - name: Check RST conformity with doc8
-        run: tox -e doc8
+      # - name: Check RST conformity with doc8
+      #  run: tox -e doc8
       - name: Check docstring coverage
         run: tox -e docstr-coverage
       # - name: Check documentation build with Sphinx
