--- a/tox.ini
+++ b/tox.ini
@@ -55,7 +55,7 @@ deps =
     darglint
     flake8
     flake8-black
-    flake8-bandit
+    # flake8-bandit
     flake8-bugbear
     flake8-colors
     flake8-docstrings
