Modernize package install (#5)

--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
+isolated_build = true
 envlist =
     # always keep coverage-clean first
     # coverage-clean
@@ -39,8 +40,8 @@ deps =
     isort
 skip_install = true
 commands =
-    black src/umls_downloader/ tests/ setup.py
-    isort src/umls_downloader/ tests/ setup.py
+    black src/umls_downloader/ tests/
+    isort src/umls_downloader/ tests/
 description = Run linters.
 
 [testenv:manifest]
@@ -64,7 +65,7 @@ deps =
     pep8-naming
     pydocstyle
 commands =
-    flake8 src/umls_downloader/ tests/ setup.py
+    flake8 src/umls_downloader/ tests/
 description = Run the flake8 tool with several plugins (bandit, docstrings, import order, pep8 naming). See https://cthoyt.com/2020/04/25/how-to-code-with-me-flake8.html for more information.
 
 [testenv:pyroma]
@@ -95,7 +96,7 @@ skip_install = true
 deps =
     docstr-coverage
 commands =
-    docstr-coverage src/umls_downloader/ tests/ setup.py --skip-private --skip-magic
+    docstr-coverage src/umls_downloader/ tests/ --skip-private --skip-magic
 description = Run the docstr-coverage tool to check documentation coverage
 
 [testenv:docs]
@@ -137,9 +138,9 @@ deps =
 skip_install = true
 deps =
     wheel
-    setuptools
+    build
 commands =
-    python setup.py -q sdist bdist_wheel
+    python -m build --sdist --wheel --no-isolation
 
 [testenv:release]
 description = Release the code to PyPI so users can pip install it
