--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -43,12 +43,12 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: pip install tox
-      # - name: Check RST conformity with doc8
-      #  run: tox -e doc8
+      - name: Check RST conformity with doc8
+        run: tox -e doc8
       - name: Check docstring coverage
         run: tox -e docstr-coverage
-      # - name: Check documentation build with Sphinx
-      #   run: tox -e docs
+      - name: Check documentation build with Sphinx
+        run: tox -e docs-test
   tests:
     name: Tests
     runs-on: ${{ matrix.os }}
