--- a/tox.ini
+++ b/tox.ini
@@ -16,6 +16,7 @@ envlist =
     mypy
     # documentation linters/checkers
     docstr-coverage
+    docs
     # the actual tests
     py
     # always keep coverage-report last
@@ -100,10 +101,21 @@ commands =
 description = Run the docstr-coverage tool to check documentation coverage
 
 [testenv:docs]
+extras =
+    docs
+    align
+    gha
+    export
+commands =
+    python -m sphinx -W -b {posargs:html} -d docs/build/doctrees docs/source docs/build/{posargs:html}
+
+[testenv:docs-test]
 changedir = docs
 extras =
-    # See the [options.extras_require] entry in setup.cfg for "docs"
     docs
+    align
+    gha
+    export
 commands =
     mkdir -p {envtmpdir}
     cp -r source {envtmpdir}/source
@@ -111,10 +123,6 @@ commands =
     sphinx-build -W -b coverage -d {envtmpdir}/build/doctrees {envtmpdir}/source {envtmpdir}/build/coverage
     cat {envtmpdir}/build/coverage/c.txt
     cat {envtmpdir}/build/coverage/python.txt
-whitelist_externals =
-    /bin/cp
-    /bin/cat
-    /bin/mkdir
 
 [testenv:coverage-report]
 deps = coverage
