--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -26,3 +26,7 @@ replace = version = {new_version}
 [bumpversion:file:src/umls_downloader/version.py]
 search = VERSION = "{current_version}"
 replace = VERSION = "{new_version}"
+
+[bumpversion:file:docs/source/conf.py]
+search = release = "{current_version}"
+replace = release = "{new_version}"
