--- a/tox.ini
+++ b/tox.ini
@@ -185,5 +185,5 @@ commands =
     git push --tags
     bump2version patch
     git push
-whitelist_externals =
+allowlist_externals =
     /usr/bin/git
