--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@
 ##########################
 [metadata]
 name = umls_downloader
-version = 0.1.2
+version = 0.1.3-dev
 description = Automate downloading UMLS data.
 long_description = file: README.md
 long_description_content_type = text/markdown
