--- a/tox.ini
+++ b/tox.ini
@@ -147,6 +147,7 @@ skip_install = true
 deps =
     wheel
     build
+    setuptools
 commands =
     python -m build --sdist --wheel --no-isolation
 
