--- a/tox.ini
+++ b/tox.ini
@@ -78,7 +78,9 @@ commands = pyroma --min=10 .
 description = Run the pyroma tool to check the package friendliness of the project.
 
 [testenv:mypy]
-deps = mypy
+deps =
+    mypy
+    types-requests
 skip_install = true
 commands = mypy --install-types --non-interactive --ignore-missing-imports src/umls_downloader/
 description = Run the mypy tool to check static typing on the project.
@@ -103,26 +105,29 @@ description = Run the docstr-coverage tool to check documentation coverage
 [testenv:docs]
 extras =
     docs
-    align
-    gha
-    export
 commands =
     python -m sphinx -W -b {posargs:html} -d docs/build/doctrees docs/source docs/build/{posargs:html}
 
 [testenv:docs-test]
+description = Test building the documentation in an isolated environment.
 changedir = docs
 extras =
-    docs
-    align
-    gha
-    export
+    {[testenv:docs]extras}
 commands =
     mkdir -p {envtmpdir}
     cp -r source {envtmpdir}/source
-    sphinx-build -W -b html -d {envtmpdir}/build/doctrees {envtmpdir}/source {envtmpdir}/build/html
-    sphinx-build -W -b coverage -d {envtmpdir}/build/doctrees {envtmpdir}/source {envtmpdir}/build/coverage
+    python -m sphinx -W -b html     -d {envtmpdir}/build/doctrees {envtmpdir}/source {envtmpdir}/build/html
+    python -m sphinx -W -b coverage -d {envtmpdir}/build/doctrees {envtmpdir}/source {envtmpdir}/build/coverage
     cat {envtmpdir}/build/coverage/c.txt
     cat {envtmpdir}/build/coverage/python.txt
+allowlist_externals =
+    /bin/cp
+    /bin/cat
+    /bin/mkdir
+    # for compatibility on GitHub actions
+    /usr/bin/cp
+    /usr/bin/cat
+    /usr/bin/mkdir
 
 [testenv:coverage-report]
 deps = coverage
